tests/ui/privacy/sealed-traits/private-trait-non-local.rs
extern crate core;
use core::slice::index::private_slice_index::Sealed; //~ ERROR module `index` is private
fn main() {
}
